# pvr.home-system

./: .gitmodules  CMakeLists.txt
pvr.home-system/: addon.xml  addon.xml.in
src/: client.cpp  pvrclient.cpp  pvrclient.h
